apps/soulsync/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soulsync
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: soulsync
    app.kubernetes.io/part-of: soulsync
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: soulsync
    app.kubernetes.io/part-of: soulsync
  ports:
    - name: http
      port: 80
      targetPort: 8008
      protocol: TCP
