apps/soulsync/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soulsync
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: soulsync
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: soulsync.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: soulsync
                port:
                  number: 80
    - host: soulsync.pj-home-lab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: soulsync
                port:
                  number: 80
